[tool.poetry]
name = "cython-extension"
version = "0.1.0"
description = "Experimentation with Cython"
authors = ["sarang-26 <65524630+sarang-26@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cython = "^3.0.5"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
